--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,28 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+
+# Android Studio
+.idea/
+.gradle
+/*/local.properties
+/*/out
+build/
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
