--- a/YabaAndroid/Yaba/build.gradle
+++ b/YabaAndroid/Yaba/build.gradle
@@ -12,6 +12,25 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    preprocess
+}
+
+dependencies {
+
+    compile project(':Volley')
+    compile 'com.android.support:appcompat-v7:18.0.0'
+
+    compile 'com.jakewharton:butterknife:3.0.0'
+    compile 'com.jakewharton.timber:timber:1.1.0'
+
+    preprocess 'com.squareup.dagger:dagger-compiler:1.1.0'
+    compile 'com.squareup.dagger:dagger:1.1.0'
+
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile files('libs/simple-xml-2.7.1.jar')
+}
+
 android {
     compileSdkVersion 18
     buildToolsVersion "18.0.0"
@@ -22,12 +41,18 @@ android {
     }
 }
 
-dependencies {
-    compile project(':Volley')
-    compile 'com.android.support:appcompat-v7:18.0.0'
-    compile 'com.jakewharton:butterknife:3.0.0'
-    compile 'com.squareup.dagger:dagger:1.1.0'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.jakewharton.timber:timber:1.1.0'
-    compile files('libs/simple-xml-2.7.1.jar')
+android.applicationVariants.all { variant ->
+    //Where to place the generated code
+    variant.ext.set("dagger_gen_${variant.dirName}", file("${project.buildDir}/source/dagger_gen/${variant.dirName}"))
+
+    //Do the actual preprocessor things
+    variant.javaCompile.doFirst {
+        File out = variant.ext.get("dagger_gen_${variant.dirName}")
+        out.mkdirs()
+        variant.javaCompile.options.compilerArgs += [
+                '-processorpath', configurations.preprocess.getAsPath(),
+                '-s', out
+        ]
+    }
+
 }
