--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -8,13 +8,24 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
+    <!--Internet-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--Location-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--Write cache-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
     <application
+        android:name=".application.YabaApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.pilasvacias.yaba.MainActivity"
+            android:name=".screens.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
