--- a/YabaAndroid/gradle/wrapper/gradle-wrapper.properties
+++ b/YabaAndroid/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Oct 08 22:50:51 CEST 2013
+#Mon Oct 14 22:30:47 CEST 2013
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.7-all.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.7-bin.zip
