--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pilasvacias.yaba"
     android:versionCode="1"
+    android:sharedUserId="com.pilasvacias.yaba"
+    android:installLocation="auto"
     android:versionName="1.0" >
 
     <uses-sdk
@@ -37,7 +39,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
