--- a/YabaAndroid/gradle/wrapper/gradle-wrapper.properties
+++ b/YabaAndroid/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Oct 15 15:32:57 CEST 2013
+#Wed Oct 16 22:40:10 CEST 2013
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.7-all.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.7-bin.zip
