--- a/YabaAndroid/Yaba/build.gradle
+++ b/YabaAndroid/Yaba/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.1.0'
 
     compile 'com.google.code.gson:gson:2.2.4'
-    compile files('libs/simple-xml-2.7.1.jar')
+    compile ('com.thoughtworks.xstream:xstream:1.4.5'){
+        exclude module: 'xmlpull'
+    }
 }
 
 android {
