--- a/YabaAndroid/Yaba/build.gradle
+++ b/YabaAndroid/Yaba/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     apt 'com.squareup.dagger:dagger-compiler:1.1.0'
     compile 'com.squareup.dagger:dagger:1.1.0'
 
+    compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.2.4'
     compile ('com.thoughtworks.xstream:xstream:1.4.5'){
         exclude module: 'xmlpull'
