Removed flavors for 2.3 and 4.0 and added flavors for free and pro.

--- a/YabaAndroid/Yaba/build.gradle
+++ b/YabaAndroid/Yaba/build.gradle
@@ -74,14 +74,14 @@ android {
     }
 
     productFlavors {
-        api2 {
-            packageName "com.pilasvacias.api2.yaba"
-            minSdkVersion 10
+        free {
+            packageName "com.pilasvacias.yaba.free"
+            minSdkVersion 14
         }
 
-        api4 {
-            packageName "com.pilasvacias.api4.yaba"
-            minSdkVersion 10
+        pro {
+            packageName "com.pilasvacias.yaba.pro"
+            minSdkVersion 14
         }
     }
 }
