--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
           android:versionName="1.0">
 
     <uses-sdk
+        android:minSdkVersion="14"
         android:targetSdkVersion="18"/>
 
     <!--Internet-->
