--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".screens.settings.SettingsActivity"
+            android:label="@string/activity_settings"
+            android:launchMode="singleTop"
+            android:parentActivityName="com.pilasvacias.yaba.screens.MainActivity" />
+        <activity
             android:name=".screens.search.NfcScanActivity"
             android:label="@string/activity_nfc_scan"
             android:launchMode="singleTop"
