Begin implementation of database update service.

--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service android:name=".modules.emt.persistence.EmtUpdateService"/>
+
     </application>
 
 </manifest>
