--- a/YabaAndroid/Yaba/build.gradle
+++ b/YabaAndroid/Yaba/build.gradle
@@ -18,12 +18,17 @@ configurations {
 }
 
 android {
-    compileSdkVersion 18
-    buildToolsVersion "18.1.1"
+    compileSdkVersion 19
+    buildToolsVersion "19.0.0"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 18
+        targetSdkVersion 19
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     signingConfigs {
@@ -123,6 +128,7 @@ task buildSigned(dependsOn: [assembleRelease, check]) {
                 ext.vn = readApkInfo.ext.versionName
                 ext.vc = readApkInfo.ext.versionCode
             } else {
+                //Parsing the manifest file is an option, but kind of hard
                 ext.vn = "auto"
                 ext.vc = "0"
             }
