--- a/YabaAndroid/Yaba/src/main/AndroidManifest.xml
+++ b/YabaAndroid/Yaba/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="18"/>
+        android:targetSdkVersion="19"/>
 
     <!--Internet-->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -20,6 +20,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--NFC-->
     <uses-permission android:name="android.permission.NFC"/>
+    <!-- Required to register a SyncStatusObserver to display a "syncing..." progress indicator.
+    Not used yet -->
+    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
+    <!-- Required to enable our SyncAdapter after it's created. -->
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <!-- Required because we're manually creating a new account. -->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -87,7 +94,55 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".modules.emt.persistence.EmtUpdateService"/>
+        <!-- ContentProvider to store stops data.
+
+        The "authorities" here are defined as part of a ContentProvider interface. It's used here
+        as an attachment point for the SyncAdapter. See res/xml/syncadapter.xml and
+        SyncService.java.
+
+        Since this ContentProvider is not exported, it will not be accessible outside of this app's
+        package.
+
+        We use a stub because we ormlite is more convenient to use, a ContentProvider is pain but
+        it must exist for this to work-->
+        <provider
+            android:name=".core.sync.provider.StubProvider"
+            android:authorities="com.pilasvacias.yaba"
+            android:exported="false"/>
+
+        <!-- This service implements our SyncAdapter. It needs to be exported, so that the system
+        sync framework can access it. -->
+        <service
+            android:name=".core.sync.adapter.SyncService"
+            android:exported="true">
+            <!-- This intent filter is required. It allows the system to launch the sync service
+            as needed. -->
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+            <!-- This points to a required XML file which describes our SyncAdapter. -->
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter"/>
+        </service>
+
+        <!-- This implements the account we'll use as an attachment point for our SyncAdapter. Since
+        our SyncAdapter doesn't need to authenticate the current user (it just fetches a public emt data),
+        this account's implementation is empty.
+
+        It's also possible to attach a SyncAdapter to an existing account provided by another
+        package. In that case, this element could be omitted here. -->
+        <service android:name=".core.sync.accounts.GenericAccountService">
+            <!-- Required filter used by the system to launch our account service. -->
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+            <!-- This points to an XMLf ile which describes our account service. -->
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator"/>
+        </service>
+
 
     </application>
 
